[gd_scene load_steps=3 format=3 uid="uid://e6r4d71vqsfj"]

[ext_resource type="Script" uid="uid://bnyq8sb12bhpl" path="res://scripts/ui/GenerateHeroScene.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://o3jyg78kpuht" path="res://scenes/ChatBox.tscn" id="2_o882i"]

[node name="GenerateHeroScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = 7.0
offset_right = 842.0
offset_bottom = 328.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Введіть ім'я героя:"

[node name="HeroNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Сума благословення (необов'язково):"

[node name="BlessingAmountInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Створити"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
